--- a/public/css/app.css
+++ b/public/css/app.css
@@ -708,6 +708,21 @@ select {
 .left-0 {
   left: 0px;
 }
+.top-px {
+  top: 1px;
+}
+.top-9 {
+  top: 2.25rem;
+}
+.top-3 {
+  top: 0.75rem;
+}
+.top-36 {
+  top: 9rem;
+}
+.-top-36 {
+  top: -9rem;
+}
 .z-10 {
   z-index: 10;
 }
@@ -716,6 +731,12 @@ select {
 }
 .m-2 {
   margin: 0.5rem;
+}
+.m-1 {
+  margin: 0.25rem;
+}
+.m-auto {
+  margin: auto;
 }
 .mx-auto {
   margin-left: auto;
@@ -728,6 +749,10 @@ select {
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 .-mr-2 {
   margin-right: -0.5rem;
@@ -759,11 +784,14 @@ select {
 .mt-8 {
   margin-top: 2rem;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
 .ml-2 {
   margin-left: 0.5rem;
 }
-.mb-3 {
-  margin-bottom: 0.75rem;
+.mt-12 {
+  margin-top: 3rem;
 }
 .block {
   display: block;
@@ -813,14 +841,14 @@ select {
 .h-10 {
   height: 2.5rem;
 }
-.h-12 {
-  height: 3rem;
-}
 .h-4 {
   height: 1rem;
 }
 .h-5 {
   height: 1.25rem;
+}
+.h-9 {
+  height: 2.25rem;
 }
 .min-h-full {
   min-height: 100%;
@@ -867,6 +895,12 @@ select {
 .w-5 {
   width: 1.25rem;
 }
+.w-36 {
+  width: 9rem;
+}
+.w-screen {
+  width: 100vw;
+}
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -884,6 +918,10 @@ select {
 }
 .translate-x-1\/2 {
   --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-x-full {
+  --tw-translate-x: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-95 {
@@ -904,9 +942,6 @@ select {
      -moz-appearance: none;
           appearance: none;
 }
-.flex-col {
-  flex-direction: column;
-}
 .items-center {
   align-items: center;
 }
@@ -915,6 +950,9 @@ select {
 }
 .justify-between {
   justify-content: space-between;
+}
+.justify-around {
+  justify-content: space-around;
 }
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -954,19 +992,8 @@ select {
 .rounded-2xl {
   border-radius: 1rem;
 }
-.rounded-none {
-  border-radius: 0px;
-}
 .rounded {
   border-radius: 0.25rem;
-}
-.rounded-t-md {
-  border-top-left-radius: 0.375rem;
-  border-top-right-radius: 0.375rem;
-}
-.rounded-b-md {
-  border-bottom-right-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem;
 }
 .border {
   border-width: 1px;
@@ -1047,9 +1074,6 @@ select {
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
 .from-blue-200 {
   --tw-gradient-from: #bfdbfe;
   --tw-gradient-to: rgb(191 219 254 / 0);
@@ -1060,24 +1084,9 @@ select {
   --tw-gradient-to: rgb(251 207 232 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
-.from-red-500 {
-  --tw-gradient-from: #ef4444;
-  --tw-gradient-to: rgb(239 68 68 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.from-rose-500 {
-  --tw-gradient-from: #f43f5e;
-  --tw-gradient-to: rgb(244 63 94 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
 .from-cyan-600 {
   --tw-gradient-from: #0891b2;
   --tw-gradient-to: rgb(8 145 178 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.from-red-200 {
-  --tw-gradient-from: #fecaca;
-  --tw-gradient-to: rgb(254 202 202 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 .via-blue-400 {
@@ -1088,27 +1097,14 @@ select {
   --tw-gradient-to: rgb(244 114 182 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), #f472b6, var(--tw-gradient-to);
 }
-.via-red-400 {
-  --tw-gradient-to: rgb(248 113 113 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #f87171, var(--tw-gradient-to);
-}
 .to-blue-600 {
   --tw-gradient-to: #2563eb;
 }
 .to-pink-600 {
   --tw-gradient-to: #db2777;
 }
-.to-green-500 {
-  --tw-gradient-to: #22c55e;
-}
-.to-red-500 {
-  --tw-gradient-to: #ef4444;
-}
 .to-pink-500 {
   --tw-gradient-to: #ec4899;
-}
-.to-red-600 {
-  --tw-gradient-to: #dc2626;
 }
 .object-cover {
   -o-object-fit: cover;
@@ -1265,10 +1261,6 @@ select {
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity));
 }
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
 .text-pink-500 {
   --tw-text-opacity: 1;
   color: rgb(236 72 153 / var(--tw-text-opacity));
@@ -1359,13 +1351,6 @@ select {
 .hover\:bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-.hover\:bg-red-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-.hover\:bg-gradient-to-b:hover {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
